--- a/index.html
+++ b/index.html
@@ -20,13 +20,13 @@
     </header>
 
     <main>
+      <a href="/topicos/topico1.html">Ver tópico 1
       <div id="thread1" class="thread">
-        <a href="/topicos/topico1.html">Ver tópico 1</a>
-        <img width="50px" src="https://image.flaticon.com/icons/png/512/263/263146.png">
-        <h2>Tópico exemplo</h2>
-        <span> 8 minutos de leitura.</span>
+      <img width="50px" src="https://image.flaticon.com/icons/png/512/263/263146.png">
+      <h2>Tópico exemplo</h2>
+      <span> 8 minutos de leitura.</span>
       </div>
-
+      </a>
       <div id="thread1" class="thread">
         <img width="50px" src="https://image.flaticon.com/icons/png/512/326/326994.png">
         <h2>Tópico exemplo</h2>
