--- a/topicos/topico1.html
+++ b/topicos/topico1.html
@@ -1,8 +1,8 @@
-!<!DOCTYPE html>
+<!DOCTYPE html>
 <html>
   <head>
     <meta charset="utf-8">
-    <title> Alo </title>
+    <title> </title>
   </head>
   <body>
 
