--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     </header>
 
     <main>
-      <a href="/topicos/topico1.html">Ver tópico 1
+      <a href="/topicos/topico1.html">
       <div id="thread1" class="thread">
       <img width="50px" src="https://image.flaticon.com/icons/png/512/263/263146.png">
       <h2>Tópico exemplo</h2>
