--- a/redes/index.html
+++ b/redes/index.html
@@ -20,15 +20,22 @@
     </header>
 
     <main>
-      <a href="/topicos/topico1.html">
-      <div id="thread1" class="thread">
-      <img width="50px" src="https://image.flaticon.com/icons/png/512/263/263146.png">
-      <h2>Tópico exemplo</h2>
-      <span> 8 minutos de leitura.</span>
-      </div>
+      <a href="./topicos/topico1.html">
+        <div id="thread1" class="thread">
+          <img width="50px" src="https://image.flaticon.com/icons/png/512/263/263146.png">
+          <h2>Tópico exemplo</h2>
+          <span> 8 minutos de leitura.</span>
+        </div>
       </a>
+
       <div id="thread1" class="thread">
         <img width="50px" src="https://image.flaticon.com/icons/png/512/326/326994.png">
+        <h2>Tópico exemplo</h2>
+        <span> 8 minutos de leitura.</span>
+      </div>
+
+      <div id="thread1" class="thread">
+        <img width="50px" src="http://www.flaticon.com/premium-icon/icons/svg/333/333906.svg">
         <h2>Tópico exemplo</h2>
         <span> 8 minutos de leitura.</span>
       </div>
