--- a/redes/index.html
+++ b/redes/index.html
@@ -35,7 +35,7 @@
       </div>
 
       <div id="thread1" class="thread">
-        <img width="50px" src="http://www.flaticon.com/premium-icon/icons/svg/333/333906.svg">
+        <img width="50px" src="https://image.flaticon.com/icons/png/512/333/333906.png">
         <h2>Tópico exemplo</h2>
         <span> 8 minutos de leitura.</span>
       </div>
