--- a/redes/index.html
+++ b/redes/index.html
@@ -28,17 +28,37 @@
         </div>
       </a>
 
-      <div id="thread1" class="thread">
-        <img width="50px" src="https://image.flaticon.com/icons/png/512/326/326994.png">
-        <h2>Tópico exemplo</h2>
-        <span> 8 minutos de leitura.</span>
-      </div>
+      <a href="./topicos/topico2.html">
+        <div id="thread1" class="thread">
+          <img width="50px" src="https://image.flaticon.com/icons/png/512/326/326994.png">
+          <h2>Tópico exemplo</h2>
+          <span> 8 minutos de leitura.</span>
+        </div>
+      </a>
 
-      <div id="thread1" class="thread">
-        <img width="50px" src="https://image.flaticon.com/icons/png/512/333/333906.png">
-        <h2>Tópico exemplo</h2>
-        <span> 8 minutos de leitura.</span>
-      </div>
+      <a href="./topicos/topico3.html">
+        <div id="thread1" class="thread">
+          <img width="50px" src="https://image.flaticon.com/icons/png/512/333/333906.png">
+          <h2>Tópico exemplo</h2>
+          <span> 8 minutos de leitura.</span>
+        </div>
+      </a>
+
+      <a href="./topicos/topico4.html">
+        <div id="thread1" class="thread">
+          <img width="50px" src="https://image.flaticon.com/icons/png/512/36/36181.png">
+          <h2>Tópico exemplo</h2>
+          <span> 8 minutos de leitura.</span>
+        </div>
+      </a>
+
+      <a href="./topicos/topico5.html">
+        <div id="thread1" class="thread">
+          <img width="50px" src="https://image.flaticon.com/icons/png/512/159/159249.png">
+          <h2>Tópico exemplo</h2>
+          <span> 8 minutos de leitura.</span>
+        </div>
+      </a>
 
     </main>
 
