--- a/redes/index.html
+++ b/redes/index.html
@@ -5,6 +5,9 @@
     <title>Introdução Redes</title>
     <link rel="stylesheet" type="text/css" href="css/style.css">
     <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700,900" rel="stylesheet">
+    <link rel="shortcut icon" href="./assets/favicon.ico" type="image/x-icon">
+    <link rel="icon" href="./assets/favicon.ico" type="image/x-icon">
+    <meta name="viewport" content="width=device-width, user-scalable=no">
   </head>
   <body>
     <header>
@@ -22,7 +25,7 @@
     <main>
       <a href="./topicos/topico1.html">
         <div id="thread1" class="thread">
-          <img width="50px" src="https://image.flaticon.com/icons/png/512/263/263146.png">
+          <img width="50px" src="https://image.flaticon.com/icons/svg/182/182321.svg">
           <h2>Tópico exemplo</h2>
           <span> 8 minutos de leitura.</span>
         </div>
@@ -30,8 +33,8 @@
 
       <a href="./topicos/topico2.html">
         <div id="thread1" class="thread">
-          <img width="50px" src="https://image.flaticon.com/icons/png/512/326/326994.png">
-          <h2>Tópico exemplo</h2>
+          <img width="50px" src="https://image.flaticon.com/icons/svg/218/218592.svg">
+          <h2>Software de Redes</h2>
           <span> 8 minutos de leitura.</span>
         </div>
       </a>
