--- a/redes/topicos/topico5.html
+++ b/redes/topicos/topico5.html
@@ -9,6 +9,7 @@
     <meta name="viewport" content="width=device-width, user-scalable=no">
   </head>
   <body>
+    <a href="../index.html" class="home">Voltar para a página inicial</a>
     <header class="topicheader">
       <h1 class="title">Software de Redes</h1>
       <time> 27 de Abril, 2017. </time>
