adding content topic3.html

--- a/redes/index.html
+++ b/redes/index.html
@@ -34,15 +34,15 @@
       <a href="./topicos/topico2.html">
         <div id="thread1" class="thread">
           <img width="50px" src="https://image.flaticon.com/icons/svg/218/218592.svg">
-          <h2>Software de Redes</h2>
+          <h2>Software de Rede</h2>
           <span> 8 minutos de leitura.</span>
         </div>
       </a>
 
       <a href="./topicos/topico3.html">
         <div id="thread1" class="thread">
-          <img width="50px" src="https://image.flaticon.com/icons/png/512/333/333906.png">
-          <h2>Tópico exemplo</h2>
+          <img width="50px" src="https://image.flaticon.com/icons/svg/182/182393.svg">
+          <h2>Hardware de Rede</h2>
           <span> 8 minutos de leitura.</span>
         </div>
       </a>
