--- a/redes/topicos/topico2.html
+++ b/redes/topicos/topico2.html
@@ -11,7 +11,7 @@
   <body>
     <a href="../index.html" class="home">Voltar para a página inicial</a>
     <header class="topicheader">
-      <h1 class="title">Software de Redes</h1>
+      <h1 class="title">Software de Rede</h1>
       <time> 27 de Abril, 2017. </time>
     </header>
     <main class="topicmain">
