--- a/redes/topicos/topico3.html
+++ b/redes/topicos/topico3.html
@@ -11,29 +11,121 @@
   <body>
     <a href="../index.html" class="home">Voltar para a página inicial</a>
     <header class="topicheader">
-      <h1 class="title">Software de Redes</h1>
+      <h1 class="title">Hardware de Rede</h1>
       <time> 27 de Abril, 2017. </time>
     </header>
     <main class="topicmain">
       <p>
-        Mussum Ipsum, cacilds vidis litro abertis.
-        Ta deprimidis, eu conheço uma cachacis que pode alegrar
-        sua vidis.” Em pé sem cair, deitado sem dormir,
-        sentado sem cochilar e fazendo pose. Atirei o pau no gatis,
-        per gatis num morreus.
-        Detraxit consequat et quo num tendi nada.
+        Hardware de rede, ou dispositivos de rede, referem-se aos equipamentos que facilitam e dão
+        suporte ao uso de uma rede de computadores, ou seja, são os meios físicos necessários para a
+        comunicação entre os componentes participantes de uma rede.
       </p>
-        <img src="https://upload.wikimedia.org/wikipedia/commons/b/bf/Camadas.jpg"/>
+      <h2>Elementos de Cabeamento:</h2>
       <p>
-        Mussum Ipsum, cacilds vidis litro abertis.
-        Ta deprimidis, eu conheço uma cachacis que pode alegrar
-        sua vidis.” Em pé sem cair, deitado sem dormir,
-        sentado sem cochilar e fazendo pose. Atirei o pau no gatis,
-        per gatis num morreus.
-        Detraxit consequat et quo num tendi nada.
+        Elementos de Cabeamento são cabos utilizados para interligar elementos do hardware de rede. Vamos a alguns exemplos:
       </p>
-
-      <iframe width="400" height="315" src="https://www.youtube.com/embed/VWDn7FOusAs" frameborder="0" allowfullscreen></iframe>
+      <p>
+        <strong>- Cabo coaxial:</strong>
+        O cabo coaxial é um tipo de cabo condutor usado para transmitir sinais. Este
+        tipo de cabo é constituído por um fio de cobre condutor revestido por um
+        material isolante e rodeado de uma blindagem.
+      </p>
+      <p>
+        <strong>- Cabo de fibra óptica:</strong>
+        Fibra ótica é um filamento flexível e transparente fabricado a partir de vidro
+        ou plástico extrudido e que é utilizado como condutor de elevado
+        rendimento de luz, imagens ou impulsos codificados.
+      </p>
+      <p>
+        <strong>- Cabo de par trançado:</strong>
+        O Cabo por par trançado (Twisted pair) é um tipo de cabo que possui pares
+        de fios entrelaçados um ao redor do outro para cancelar as interferências
+        eletromagnéticas (EMI).
+      </p>
+      <p>
+        <strong>- Repetidor:</strong>
+        Em informática, repetidor é um equipamento utilizado para interligação de
+        redes idênticas, pois eles amplificam e regeneram eletricamente os sinais
+        transmitidos no meio físico.
+      </p>
+      <p>
+        <strong>- Transceptor:</strong>
+        Um transceptor é um dispositivo que combina um transmissor e um
+        receptor utilizando componentes de circuito comuns para ambas funções
+        num só aparelho. Se esses componentes não forem comuns, esse aparelho
+        designa-se transmissor-receptor.
+      </p>
+      <h3> Outros componentes de hardware:</h3>
+      <p>
+        <strong>- Placa de rede:</strong>
+        A placa de rede é o hardware que permite aos computadores conversarem entre si
+        através da rede. A sua função é controlar todo o envio e recepção de dados através
+        da rede. Cada arquitetura de rede exige um tipo específico de placa de rede; sendo
+        as arquiteturas mais comuns a rede em anel Token Ring e a tipo Ethernet.
+      </p>
+      <p>
+        <strong>- Concentrador (hub):</strong>
+        Hub (traduzido do Inglês, &quot;pivô&quot;) ou concentrador é o processo pelo qual se
+        transmite ou difunde determinada informação, tendo, como principal característica,
+        que a mesma informação está sendo enviada para muitos receptores ao mesmo
+        tempo (broadcast). Este termo é utilizado em rádio, telecomunicações e em
+        informática.
+      </p>
+      <p>
+        <strong>- Comutador (switch):</strong>
+        Comutador ou Switch é um dispositivo utilizado em redes de computadores para
+        reencaminhar pacotes (frames) entre os diversos nós. Possuem portas, assim como
+        os concentradores (hubs) a principal diferença é, o comutador segmenta a rede
+        internamente, sendo que a cada porta corresponde um domínio de colisão
+        diferente, isto é, não haverá colisões entre pacotes de segmentos diferentes.
+      </p>
+      <p>
+        <strong>- Roteador (router/gateway)</strong>
+        Roteador (router em inglês) é um dispositivo que encaminha pacotes de dados entre
+        redes de computadores, criando um conjunto de redes de sobreposição. Um
+        roteador é conectado a duas ou mais linhas de dados de redes diferentes.
+      </p>
+      <p>
+        <strong>- Modem:</strong>
+        A palavra Modem vem da junção das palavras modulador e desmodulador. É um
+        dispositivo eletrônico que modula um sinal digital numa onda analógica, pronta a ser
+        transmitida pela linha telefónica, e que demodula o sinal analógico e reconverte-o
+        para o formato digital original. Utilizado para conexão à Internet, BBS, ou a outro
+        computador.
+      </p>
+      <p>
+        <strong>- Porta de Ligação (gateway router):</strong>
+        Um Gateway, ou ponte de ligação, é uma máquina intermediária destinada,
+        geralmente, a interligar redes, separar domínios de colisão, ou mesmo traduzir
+        protocolos. Exemplos de gateway podem ser os routers (ou roteadores) e firewalls,
+        já que ambos servem de intermediários entre o utilizador e a rede.
+      </p>
+      <p>
+        <strong>- Ponte (bridge):</strong>
+        Uma <strong>ponte</strong>, ou bridge, é um dispositivo de rede que cria uma rede agregada a partir
+        de várias redes de comunicações ou vários segmentos de rede. Um dispositivo com
+        esta função é chamada de <strong>ponte de rede</strong>, ou <strong>network bridge</strong>. A operação de uma
+        ponte ou bridge é diferente daquela de um roteador, que permite que várias redes
+        diferentes se comuniquem independentemente, permanecendo distintas entre si.
+      </p>
+      <p>
+        <strong>- Firewall:</strong>
+        Um firewall (em português: parede de fogo) é um dispositivo de uma rede de
+        computadores que tem por objetivo aplicar uma política de segurança a um
+        determinado ponto da rede. O firewall pode ser do tipo filtros de pacotes, proxy de
+        aplicações, etc. Os firewalls são geralmente associados a redes TCP/IP.
+      </p>
+      <p>
+        <strong>- Servidor:</strong>
+        Em informática, um servidor é um software ou computador, com sistema de
+        computação centralizada que fornece serviços a uma rede de computadores,
+        chamada de cliente. Esses serviços podem ser de naturezas distintas, como por
+        exemplo, arquivos e correio eletrônico. Esta arquitetura é chamada de modelo
+        cliente-servidor, é utilizada em redes de médio e grande porte (com muitas
+        máquinas) e em redes onde a questão da segurança desempenha um papel de
+        grande importância. Exemplos de servidores: Database, e-mail, imagens, vídeos
+        (normalmente usado para gravações de câmeras de segurança), etc.
+      </p>
     </main>
     <footer>
 
