adding content topic3.html

--- a/redes/topicos/topico3.html
+++ b/redes/topicos/topico3.html
@@ -20,7 +20,7 @@
         suporte ao uso de uma rede de computadores, ou seja, são os meios físicos necessários para a
         comunicação entre os componentes participantes de uma rede.
       </p>
-      <h2>Elementos de Cabeamento:</h2>
+      <h2>Elementos de Cabeamento</h2>
       <p>
         Elementos de Cabeamento são cabos utilizados para interligar elementos do hardware de rede. Vamos a alguns exemplos:
       </p>
