adding topic content

--- a/redes/index.html
+++ b/redes/index.html
@@ -24,40 +24,40 @@
     <main>
       <a href="./topicos/topico1.html">
         <div id="thread1" class="thread">
-          <img width="50px" src="https://image.flaticon.com/icons/svg/182/182321.svg">
-          <h2>Tópico exemplo</h2>
-          <span> 8 minutos de leitura.</span>
+          <img width="50px" src="https://image.flaticon.com/icons/svg/182/182321.svg" alt="picture"/>
+          <h2>Conceito...</h2>
+          <span> 5 minutos de leitura.</span>
         </div>
       </a>
 
       <a href="./topicos/topico2.html">
         <div id="thread1" class="thread">
-          <img width="50px" src="https://image.flaticon.com/icons/svg/218/218592.svg">
+          <img width="50px" src="https://image.flaticon.com/icons/svg/218/218592.svg" alt="picture"/>
           <h2>Software de Rede</h2>
-          <span> 8 minutos de leitura.</span>
+          <span> 3 minutos de leitura.</span>
         </div>
       </a>
 
       <a href="./topicos/topico3.html">
         <div id="thread1" class="thread">
-          <img width="50px" src="https://image.flaticon.com/icons/svg/182/182393.svg">
+          <img width="50px" src="https://image.flaticon.com/icons/svg/182/182393.svg" alt="picture"/>
           <h2>Hardware de Rede</h2>
-          <span> 8 minutos de leitura.</span>
+          <span> 5 minutos de leitura.</span>
         </div>
       </a>
 
       <a href="./topicos/topico4.html">
         <div id="thread1" class="thread">
-          <img width="50px" src="https://image.flaticon.com/icons/png/512/36/36181.png">
-          <h2>Tópico exemplo</h2>
+          <img width="50px" src="https://image.flaticon.com/icons/png/512/36/36181.png" alt="picture"/>
+          <h2>Tipos de Rede</h2>
           <span> 8 minutos de leitura.</span>
         </div>
       </a>
 
       <a href="./topicos/topico5.html">
         <div id="thread1" class="thread">
-          <img width="50px" src="https://image.flaticon.com/icons/png/512/159/159249.png">
-          <h2>Tópico exemplo</h2>
+          <img width="50px" src="https://image.flaticon.com/icons/png/512/159/159249.png" alt="picture"/>
+          <h2>Modelo OSI</h2>
           <span> 8 minutos de leitura.</span>
         </div>
       </a>
