--- a/redes/topicos/topico2.html
+++ b/redes/topicos/topico2.html
@@ -38,18 +38,17 @@
 	      Existem diversos tipos de protocolos de rede, variando de acordo com o serviço a ser utilizado.
         De maneira geral há dois tipos de protocolos: Abertos e Proprietários ou Específicos.
         Os protocolos Abertos são os protocolos padrões da internet. Este podem comunicar com outros protocolos que
-        utilizam o mesmo padrão de protocolo. Um exemplo seria o TCP/IP, pois ele pode comunicar com várias plataformas como Windows,
+        utilizam o mesmo padrão de protocolo. Um exemplo seria o <strong>TCP/IP</strong>, pois ele pode comunicar com várias plataformas como Windows,
         Linux, Mac e outros. Já os protocolos Proprietários são feitos para ambiente específicos (daí o seu nome),
         pois ele apenas pode comunicar com uma plataforma padrão. Exemplos desse tipo de protocolo: IPX/SPX, NETBIOS e outros.
         São exemplos de protocolos de rede: IP (Internet Protocol), DHCP (Dynamic Host Configuration Protocol).
-        Como último item a ser destacado, pode-se falar da Hierarquia de Protocolos, de forma que
+        Como último item a ser destacado, pode-se falar da <strong>Hierarquia de Protocolos</strong>, de forma que
 	      a maioria das redes é organizada como uma pilha de camadas colocadas umas sobre as outras.
         Cada camada oferece alguns serviços para as camadas superiores escondendo os detalhes de implementação desses serviços.
-        A camada n de uma máquina se comunica com a camada n de outra máquina. Um conjunto de camadas e protocolos é chamado
+        A camada <strong>n</strong> de uma máquina se comunica com a camada <strong>n</strong> de outra máquina. Um conjunto de camadas e protocolos é chamado
         de arquitetura de rede.
       </p>
-      <img src="../assets/Camadas.jpg">
-
+      <img src="../assets/Camadas.jpg" alt="picture"/>
     </main>
     <footer>
 
