adding content topic4.html

--- a/redes/topicos/topico4.html
+++ b/redes/topicos/topico4.html
@@ -16,24 +16,50 @@
     </header>
     <main class="topicmain">
       <p>
-        Mussum Ipsum, cacilds vidis litro abertis.
-        Ta deprimidis, eu conheço uma cachacis que pode alegrar
-        sua vidis.” Em pé sem cair, deitado sem dormir,
-        sentado sem cochilar e fazendo pose. Atirei o pau no gatis,
-        per gatis num morreus.
-        Detraxit consequat et quo num tendi nada.
+        Uma rede é uma coleção de computadores que se comunicam entre si, afim de compartilhar
+        informações, funcionalidades e serviços, como por exemplo dados, softwares e hardwares.
+        De forma sucinta, vamos a alguns exemplos de tipo de rede:
       </p>
-        <img src="https://upload.wikimedia.org/wikipedia/commons/b/bf/Camadas.jpg"/>
       <p>
-        Mussum Ipsum, cacilds vidis litro abertis.
-        Ta deprimidis, eu conheço uma cachacis que pode alegrar
-        sua vidis.” Em pé sem cair, deitado sem dormir,
-        sentado sem cochilar e fazendo pose. Atirei o pau no gatis,
-        per gatis num morreus.
-        Detraxit consequat et quo num tendi nada.
+        <strong>- LAN (Local Area Network):</strong>
+        A LAN é uma das redes mais comuns; ela conecta computadores, impressoras e outros
+        dispositivos dentro de uma residência, prédio, empresas, escolas e outros locais. Ela é
+        extremamente simples, mas é limitada ao espaço físico.
+        A WLAN é a versão alternativa, sendo wireless.
       </p>
-
-      <iframe width="400" height="315" src="https://www.youtube.com/embed/VWDn7FOusAs" frameborder="0" allowfullscreen></iframe>
+      <p>
+        <strong>- MAN (Metropolitan Area Network):</strong>
+        Essa rede conecta múltiplas redes locais, sendo possível, por exemplo, uma empresa
+        com dois escritórios terem a capacidade de trocar dados entre si.
+        WMAN é uma alternativa Wireless.
+      </p>
+      <p>
+        <strong>- RAN (Regional Area Network):</strong>
+        RAN é a rede utilizada para conectar os computadores de uma selecionada região
+        geográfica. Esse tipo de rede tem como característica ter alta velocidade graças aos
+        cabos de fibra ótica.
+      </p>
+      <p>
+        <strong>- WAN (Wide Area Network):</strong>
+        A rede WAN abrange áreas intercontinentais. Um grande exemplo desse tipo de rede é
+        a Internet, onde usuários do mundo todo se comunicam.
+        Existe também a WWAN, que é wireless.
+      </p>
+      <p>
+        <strong>- PAN (Personal Area Network):</strong>
+        É uma rede bastante limitada de curto alcance que faz a conexão entre dispositivos.
+        Um exemplo dessa rede é o Bluetooth.
+      </p>
+      <p>
+        <strong>- SAN (Storage Area Network):</strong>
+        A SAN serve exclusivamente para armazenar dados em um servidor através de
+        computadores, sendo limitado a isso.
+      </p>
+      <p>
+        <strong>- CAN (Campus Area Network):</strong>
+        CAN é a rede usada para conectar computadores de residências ou prédios diferentes.
+        Bastante comum em universidades e industrias.
+      </p>
     </main>
     <footer>
 
