adding content topico5.html

--- a/redes/topicos/topico5.html
+++ b/redes/topicos/topico5.html
@@ -16,26 +16,24 @@
     </header>
     <main class="topicmain">
       <p>
-        Open System Interconnection, ou somente OSI, é um modelo feito para facilitar a interligação de sistemas computacionais,
+        <strong>Open System Interconnection</strong>, ou somente <strong>OSI</strong>, é um modelo feito para facilitar a interligação de sistemas computacionais,
         e principalmente utilizar o modelo como entendimento de como os protocolos de rede funcionam.
         O modelo OSI é dividido em <strong> sete </strong> camadas, eis as camadas:
       </p>
-      <p>
-        7. Camada de aplicação;
-        6. Camada de apresentação;
-        5. Camada de sessão;
-        4. Camada de transporte;
-        3. Camada de rede;
-        2. Camada de enlace de dados;
-        1. Camada física.
-      </p>
+      <p>7. Camada de aplicação;</p>
+      <p>6. Camada de apresentação;</p>
+      <p>5. Camada de sessão;</p>
+      <p>4. Camada de transporte;</p>
+      <p>3. Camada de rede;</p>
+      <p>2. Camada de enlace de dados;</p>
+      <p>1. Camada física;</p>
       <p>
         Cada camada do modelo OSI possui suas implementações e suas próprias funções,
         e o principal papel do OSI é padronizar a ordem em que ocorre os acontecimentos,
         de forma que as camadas sejam hierárquicas, onde cada camada é conhecida de forma genérica como "camada N".
         Somente a entidade N+1 (na camada acima de N) pode solicitar serviços de uma "entidade N" (na camada N).
       </p>
-ss    </main>
+    </main>
     <footer>
 
     </footer>
