adding content topico5.html

--- a/redes/topicos/topico5.html
+++ b/redes/topicos/topico5.html
@@ -20,19 +20,44 @@
         e principalmente utilizar o modelo como entendimento de como os protocolos de rede funcionam.
         O modelo OSI é dividido em <strong> sete </strong> camadas, eis as camadas:
       </p>
-      <p>7. Camada de aplicação;</p>
-      <p>6. Camada de apresentação;</p>
-      <p>5. Camada de sessão;</p>
+      <p>7. Camada de aplicação;  6. Camada de apresentação;  5. Camada de sessão;</p>
       <p>4. Camada de transporte;</p>
       <p>3. Camada de rede;</p>
       <p>2. Camada de enlace de dados;</p>
       <p>1. Camada física;</p>
+      <img src="../assets/osimodel.jpg" alt="picture"/>
       <p>
         Cada camada do modelo OSI possui suas implementações e suas próprias funções,
         e o principal papel do OSI é padronizar a ordem em que ocorre os acontecimentos,
         de forma que as camadas sejam hierárquicas, onde cada camada é conhecida de forma genérica como "camada N".
         Somente a entidade N+1 (na camada acima de N) pode solicitar serviços de uma "entidade N" (na camada N).
       </p>
+      <p>
+        Em vez de explicar cada uma das setes camadas, explicaremos o modelo OSI de forma
+        simplificada, menos conceitual, com coisas mais práticas. Esse modelo simplificado do OSI possui cinco camadas,
+        e não sete como vimos acima. São essas 5 camadas:
+      </p>
+      <p>
+        <strong>- Camada de aplicação:</strong>
+        São os protocolos de nível mais alto, como HTTP (transferência de hipertexto),
+        FTP (transferência de arquivos), DNS (resolução de nomes). Seus protocolos são implementados por aplicações do usuário.
+        Um exemplo de aplicação é o navegador, que implementa o protocolo HTTP para se comunicar com o servidor.
+      </p>
+      <p>
+        <strong>- Camada de transporte:</strong>
+        Nessa camada ficam os protocolos TCP/UDP. A
+        principal função desses protocolos é empacotar os dados e manter o controle da entrega desses dados,
+        por isso o nome da camada. O protocolo TCP tem a garantia de entrega dos dados, tanto o protocolo FTP, SSH, HTTP, etc. usam
+        esse protocolo para justamente ter essa garantia da entrega do conteúdo. Enquanto que o protocolo UDP tem uma particularidade:
+        não controla a forma como os pacotes de dados chegam e não se interessa e os dados vão se perder no meio do caminho.
+      </p>
+      <p>
+        <strong>- Camada de rede:</strong>
+          Aqui fica o protocolo IP. Trata da entrega dos pacotes no destino e seu caminho para chegar até lá.
+          Tem como responsabilidade descobrir a melhor rota pros dados pela rede.
+          É comum vermos a junção dos dois protocolos: <strong>TCP/IP e UDP/IP.</strong>
+      </p>
+
     </main>
     <footer>
 
