adding content topico5.html

--- a/redes/topicos/topico5.html
+++ b/redes/topicos/topico5.html
@@ -57,8 +57,26 @@
           Tem como responsabilidade descobrir a melhor rota pros dados pela rede.
           É comum vermos a junção dos dois protocolos: <strong>TCP/IP e UDP/IP.</strong>
       </p>
+      <p>
+        <strong>- Camada de enlace:</strong>
+          Basicamente a camada de ligação de dados ou de enlace trata sobre a detecção e a correção de erros que pode vir
+          a ocorrer na camada física. Na camada de enlace começa a depender dos dispostivos e equipamentos de hardware da camada física,
+          e todas os protocolos citados abaixo que são especificados por um orgão chamado Institute of Electrical and Electronics Engineers,
+          mais conhecido como IEEE. Os principais protocolos dessa organização são:
+          <p> Ethernet (conjunto de tecnologias que provê a rede cabeada).</p>
+          <p> Wi-Fi* (tecnologia que permite dispositivos se conectem a uma rede sem fio). </p>
+          *O nome Wi-Fi é apenas um nome comercial, pois o nome original é <strong> Dispositivo compatível com IEEE802.11.</strong>
+      </p>
+      <p>
+        <strong>- Camada física:</strong>
+          Como o próprio nome da camada já aborda, é nesse momento que tratamos sobre os componentes de hardware e resumidamente
+          em quais meios de conexão irão trafegar os dados. Diz respeito a transmissão e recepção do fluxo de bits brutos não-estruturados em um meio físico.
+          Ela descreve as interfaces elétricas,
+          ópticas, mecânicas e funcionais para o meio físico e transporta sinais para todas as camadas superiores.
+        </strong>
+      </p>
 
-    </main>
+          </main>
     <footer>
 
     </footer>
